<resources>
    <string name="app_name">Car License Detect</string>
    <string name="title_home">Home</string>
    <string name="title_live">Live</string>
    <string name="pick_image_and_perform_car_license_analysis">Pick image and perform Car-License Analysis</string>
    <string name="no_detections_present">No detections present</string>
    <string name="here_has_to_be_the_file_name_date">Here has to be the file name (date)</string>
    <string name="cars_0">Cars: 0</string>
    <string name="licenses_0">Licenses: 0</string>
    <string name="full_source_image">Full source image</string>
    <string name="cropped_source_image_of_detection_box">Cropped source image of detection box</string>
    <string name="detected_object_class_and_conf">Detected object class (and conf)</string>
    <string name="additional_detection_text">Detection additional text</string>
    <string name="nothing_detected">Nothing detected</string>
    <string name="delete_all_checked_detections">Delete all checked detections</string>
    <string name="select_all">Select All</string>
    <string name="cancel_selection">Cancel Selection</string>
    <string name="image_capture">Image capture</string>
    <string name="export_data_in_zip">Export data in .zip</string>
</resources>