<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/ivCropped"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cropped_source_image_of_detection_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_image_24" />

        <TextView
            android:id="@+id/tvClassAndConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detected_object_class_and_conf"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCropped" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:text="@string/additional_detection_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvY1"
            app:layout_constraintTop_toBottomOf="@+id/tvY1" />

        <TextView
            android:id="@+id/tvX1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="X1"
            app:layout_constraintStart_toStartOf="@+id/tvClassAndConf"
            app:layout_constraintTop_toBottomOf="@+id/tvClassAndConf" />

        <TextView
            android:id="@+id/tvX2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="X2"
            app:layout_constraintStart_toEndOf="@+id/tvX1"
            app:layout_constraintTop_toBottomOf="@+id/tvClassAndConf" />

        <TextView
            android:id="@+id/tvY1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Y1"
            app:layout_constraintStart_toStartOf="@+id/tvX1"
            app:layout_constraintTop_toBottomOf="@+id/tvX1" />

        <TextView
            android:id="@+id/tvY2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Y2"
            app:layout_constraintStart_toStartOf="@+id/tvX2"
            app:layout_constraintTop_toBottomOf="@+id/tvX2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>